@@ -7,6 +7,7 @@ The settings can be reached via a global menu item:
 >>> browser = zope.testbrowser.testing.Browser()
 >>> browser.addHeader('Authorization', 'Basic producer:producerpw')
 >>> browser.open('http://localhost/++skin++cms/repository')
+>>> browser.handleErrors = False
 >>> browser.getLink('Global settings').click()
 
 
@@ -19,3 +20,22 @@ We can set the default year and volume:
 <?xml ...
     ...Updated on ...
 
+
+
+There is a view which puts out the settings as xml. It is reachable
+anonymously:
+
+>>> browser = zope.testbrowser.testing.Browser()
+>>> browser.open('http://localhost/++skin++cms/@@global-settings.xml')
+>>> print browser.contents,
+<?xml version="1.0"?>
+<global-settings>
+  <year>2006</year>
+  <volume>27</volume>
+</global-settings>
+
+>>> print browser.headers
+Status: 200 Ok
+...
+Content-Type: text/xml;charset=utf-8
+...
