@@ -20,5 +20,14 @@
     sort="90"
     />
 
+  <browser:page
+    for="zope.location.interfaces.ISite"
+    layer="zeit.cms.browser.interfaces.ICMSLayer"
+    name="global-settings.xml"
+    class=".export.XML"
+    template="export-xml.pt"
+    permission="zope.Public"
+    />
+
 </configure>
 
