@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<global-settings
+  xmlns:tal="http://xml.zope.org/namespaces/tal">
+  <year tal:content="view/settings/default_year">2001</year>
+  <volume tal:content="view/settings/default_volume">3</volume>
+</global-settings>
