@@ -7,6 +7,7 @@ zeit.cms changes
 - Zuweisen von Keywords sorgte im FF3 für Fehler.
 - Scrollbar bei der R/O-Ansicht des Quelltexts (bug #4459).
 - Syntax-Highliting in der R/O-Ansicht des Quelltexts.
+- XML-Export der Standardeinstellungen für Jahr/Ausgabe (für Video-DB).
 
 1.1.9 (2008-09-05)
 ------------------
